# Learn-OpenCV-cpp-in-4-Hours

./: CMakeLists.txt  Chapter1.cpp  README.md
build1/: CMakeCache.txt  Makefile  first_test
src/: Chapter1.cpp  Chapter2.cpp  Chapter3.cpp  Chapter4.cpp  Chapter5.cpp  Chapter6.cpp  Chapter7.cpp  Chapter8.cpp  ColorPicker.cpp  Project1.cpp  Project2.cpp  Project3.cpp
